--- a/blocks/Feature/styles.module.scss
+++ b/blocks/Feature/styles.module.scss
@@ -56,8 +56,8 @@
   text-align: center;
 }
 
-[data-theme="main"],
-[data-theme="dark"] {
+[data-section-theme="main"],
+[data-section-theme="dark"] {
   .feature {
     .link {
       a {
