--- a/blocks/Tabs/styles.module.scss
+++ b/blocks/Tabs/styles.module.scss
@@ -245,8 +245,8 @@
 }
 
 /* Color Corrections */
-[data-theme="main"],
-[data-theme="dark"] {
+[data-section-theme="main"],
+[data-section-theme="dark"] {
   .items {
     border-left: 1px solid rgba(255, 255, 255, 0.2);
   }
