--- a/blocks/FeatureSlider/styles.module.scss
+++ b/blocks/FeatureSlider/styles.module.scss
@@ -1,7 +1,69 @@
+.container {
+  padding: 3rem 0;
+}
+
+/* Top Header */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  max-width: var(--max-width);
+  margin: 0 auto;
+  padding: 0 var(--horizontal-padding);
+  margin-bottom: 1rem;
+
+  .headerText {
+    display: flex;
+    flex-direction: column;
+    max-width: 45rem;
+
+    .description {
+      font-size: 1.2rem;
+    }
+  }
+
+  .navigation {
+    display: grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    gap: 0.5rem;
+
+    button {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      appearance: none;
+      box-shadow: none;
+      padding: 0.5rem 1rem;
+      border: 1px solid var(--light-5);
+      border-radius: var(--border-radius-small);
+      background: var(--light);
+      svg {
+        fill: var(--main-color);
+        width: 18px;
+      }
+    }
+  }
+}
+
+.center {
+  .header {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    .navigation {
+      margin-top: 2rem;
+    }
+  }
+}
+
 .carousel {
   --swiper-theme-color: var(--main-color);
   width: 100%;
-  padding: 2rem 0 4rem !important;
+  padding: 2rem 0 2rem !important;
 
   & > div {
     will-change: transform;
@@ -18,6 +80,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
+  background-color: var(--light);
   border-radius: var(--border-radius-medium);
   box-shadow: var(--shadow-medium);
   opacity: 0.75;
@@ -52,11 +115,39 @@
       font-weight: 600;
     }
 
-    .description {
+    .hidden {
       display: none;
+    }
+
+    .description {
       margin-top: 1rem;
       border-left: 4px solid var(--main-color);
       padding-left: 1.5rem;
+    }
+
+    .link {
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      margin-top: 1rem;
+      transition: opacity 0.2s;
+
+      svg {
+        fill: var(--main-color);
+        margin-left: 0.45rem;
+        width: 11px;
+        transform: translate3d(0, 0, 0);
+        transition: transform 0.25s ease;
+      }
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.75;
+          svg {
+            transform: translate3d(2px, 0, 0);
+          }
+        }
+      }
     }
   }
 
@@ -68,6 +159,7 @@
   }
 
   &.active {
+    cursor: default;
     opacity: 1;
     color: var(--dark);
 
@@ -77,7 +169,7 @@
     }
 
     .content {
-      .description {
+      .hidden {
         display: block;
       }
     }
