--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -9,6 +9,10 @@ $bp: 900px;
   padding: 4rem var(--horizontal-padding) 2.5rem;
   max-width: var(--max-width);
   margin: 0 auto;
+
+  @media (max-width: $bp) {
+    padding: 4rem var(--horizontal-padding) 3rem;
+  }
 }
 
 .additional {
@@ -22,7 +26,7 @@ $bp: 900px;
     text-align: center;
 
     & > *:not(:last-child) {
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
     }
     & > *:last-child {
       margin-bottom: 0;
@@ -48,5 +52,10 @@ $bp: 900px;
   .copyright {
     color: var(--dark-5);
     line-height: 1.3;
+    font-size: 0.95rem;
   }
+}
+
+[data-theme="dark"] .logo {
+  filter: invert(1) saturate(0) brightness(99);
 }
