--- a/forms/Application/styles.module.scss
+++ b/forms/Application/styles.module.scss
@@ -33,6 +33,8 @@
     }
     input,
     textarea {
+      background-color: var(--light);
+      color: var(--dark);
       font-family: inherit;
       font-size: 1rem;
       padding: 0.75rem;
@@ -55,11 +57,29 @@
       &:-webkit-autofill:focus,
       &:-webkit-autofill:active {
         box-shadow: 0 0 0 99px var(--main-color-light-8) inset !important;
+        color: var(--dark) !important;
+        -webkit-text-fill-color: var(--dark) !important;
       }
     }
   }
 }
 
-.password {
+.honeypot {
   display: none !important;
+}
+
+[data-theme="dark"] {
+  .form {
+    label {
+      input,
+      textarea {
+        &:-webkit-autofill,
+        &:-webkit-autofill:hover,
+        &:-webkit-autofill:focus,
+        &:-webkit-autofill:active {
+          box-shadow: 0 0 0 99px var(--light-2) inset !important;
+        }
+      }
+    }
+  }
 }
