--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -11,7 +11,7 @@ $bp: 900px;
   margin: 0 auto;
 
   @media (max-width: $bp) {
-    padding: 4rem var(--horizontal-padding) 3rem;
+    padding: 4rem var(--horizontal-padding) 3.25rem;
   }
 }
 
@@ -26,7 +26,10 @@ $bp: 900px;
     text-align: center;
 
     & > *:not(:last-child) {
-      margin-bottom: 1.5rem;
+      margin-bottom: 2rem;
+    }
+    & > *:first-child {
+      margin-bottom: 2.5rem;
     }
     & > *:last-child {
       margin-bottom: 0;
