updated several packages, removed ts runtime since new nuxt version supports it out of the box, config updates

--- a/pages/blog/_slug/styles.module.scss
+++ b/pages/blog/_slug/styles.module.scss
@@ -11,7 +11,7 @@
   position: relative;
   max-width: var(--article-max-width);
   margin: 0 auto;
-  padding: 4rem var(--horizontal-padding);
+  padding: 5rem var(--horizontal-padding) 4rem;
 
   .back {
     position: absolute;
@@ -30,6 +30,7 @@
     }
 
     svg {
+      fill: var(--dark);
       width: 10px;
       height: 10px;
       transform-origin: center;
