starting to fill content, some optimizations, language files will be refactored when they grow

--- a/blocks/Hero/styles.module.scss
+++ b/blocks/Hero/styles.module.scss
@@ -30,16 +30,18 @@ $bp-1: 1086px;
       padding: 0;
       align-items: center;
       text-align: center;
+      max-width: inherit !important;
     }
 
     .title {
       @media (max-width: $bp-1) {
-        max-width: 55rem;
+        max-width: 55rem !important;
       }
     }
 
     .typewriter {
       color: var(--main-color);
+      display: block;
     }
 
     .description {
