--- a/blocks/FeatureSlider/styles.module.scss
+++ b/blocks/FeatureSlider/styles.module.scss
@@ -15,10 +15,15 @@
   .headerText {
     display: flex;
     flex-direction: column;
-    max-width: 45rem;
+    align-items: center;
+
+    .title {
+      max-width: 55rem;
+    }
 
     .description {
       font-size: 1.2rem;
+      max-width: 45rem;
     }
   }
 
