added particle component for Hero Block, updated translations, added Assistants animation

--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -33,6 +33,10 @@ body {
   flex-direction: column;
 }
 
+#content {
+  overflow-x: hidden;
+}
+
 hr {
   border: 0;
   border-top: 1px solid var(--light-5);
