--- a/forms/Application/styles.module.scss
+++ b/forms/Application/styles.module.scss
@@ -1,6 +1,6 @@
 .form {
   background-color: var(--light);
-  margin: 0.175rem auto;
+  margin: 0.75rem auto;
   width: 100%;
   max-width: 45rem;
   padding: 3rem;
@@ -70,6 +70,8 @@
 
 [data-theme="dark"] {
   .form {
+    box-shadow: var(--shadow-large);
+    border: 1px solid var(--light-5);
     label {
       input,
       textarea {
