multiple added properties to existing blocks, added Logos Block, color corrections, fixed animation destruction when unmounted

--- a/blocks/FeatureSlider/styles.module.scss
+++ b/blocks/FeatureSlider/styles.module.scss
@@ -190,3 +190,11 @@
     opacity: 1;
   }
 }
+
+[data-theme="dark"] {
+  .slide {
+    box-shadow: none;
+    // border: 2px solid var(--light-4);
+    background-color: var(--light-2);
+  }
+}
