added collapsible component, numerous design updates, added hotel logos

--- a/blocks/FeatureSlider/styles.module.scss
+++ b/blocks/FeatureSlider/styles.module.scss
@@ -197,4 +197,9 @@
     // border: 2px solid var(--light-4);
     background-color: var(--light-2);
   }
+  [data-section-theme] {
+    .slide {
+      background-color: var(--light-4);
+    }
+  }
 }
