--- a/blocks/Tabs/styles.module.scss
+++ b/blocks/Tabs/styles.module.scss
@@ -263,12 +263,23 @@
 [data-theme="dark"] {
   .withBackground {
     .content {
-      background-color: rgba(255, 255, 255, 0.03);
+      background-color: rgba(255, 255, 255, 0.03) !important;
+      box-shadow: none !important;
     }
   }
 }
 
 /* Color Corrections */
+[data-section-theme="light"],
+[data-section-theme="grey"] {
+  .withBackground {
+    .content {
+      background-color: rgba(255, 255, 255, 0.5);
+      box-shadow: var(--shadow-small);
+    }
+  }
+}
+
 [data-section-theme="main"],
 [data-section-theme="dark"] {
   .items {
