--- a/components/Header/Navigation/styles.module.scss
+++ b/components/Header/Navigation/styles.module.scss
@@ -425,3 +425,12 @@ $submenu-rotation-x: -30deg;
     --light: var(--light);
   }
 }
+
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+
+  a {
+    pointer-events: none;
+  }
+}
