--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -68,3 +68,46 @@ textarea,
 select {
   font-size: 1rem;
 }
+
+input,
+textarea {
+  background-color: var(--light);
+  color: var(--dark);
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 0.75rem;
+  appearance: none;
+  box-shadow: none;
+  border: 1px solid var(--light-6);
+  border-radius: var(--border-radius-small);
+  width: 100%;
+  outline: none;
+
+  &:focus,
+  &:focus-within {
+    border: 1px solid var(--main-color);
+    box-shadow: inset 0 0 0 1px var(--main-color);
+  }
+
+  /* Change the white to any color */
+  &:-webkit-autofill,
+  &:-webkit-autofill:hover,
+  &:-webkit-autofill:focus,
+  &:-webkit-autofill:active {
+    box-shadow: 0 0 0 99px var(--main-color-light-8) inset !important;
+    color: var(--dark) !important;
+    -webkit-text-fill-color: var(--dark) !important;
+  }
+}
+
+[data-theme="dark"] {
+  input,
+  textarea {
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active {
+      box-shadow: 0 0 0 99px var(--light-2) inset !important;
+    }
+  }
+}
