--- a/blocks/Grid/styles.module.scss
+++ b/blocks/Grid/styles.module.scss
@@ -38,6 +38,12 @@
 .pad-large {
   padding: 5rem 0;
 }
+.pad-topOnly {
+  padding: 3rem 0 0;
+}
+.pad-bottomOnly {
+  padding: 0 0 3rem;
+}
 
 /* Gap */
 .gap-none {
@@ -51,4 +57,15 @@
 }
 .gap-large {
   gap: 4rem;
+}
+
+.search {
+  grid-column: 1 / -1;
+  width: 100%;
+  max-width: 45rem;
+  margin: 0 auto;
+
+  input {
+    padding-left: 1rem;
+  }
 }
