--- a/blocks/Hero/styles.module.scss
+++ b/blocks/Hero/styles.module.scss
@@ -4,7 +4,7 @@ $bp-2: 767px;
 
 .hero {
   position: relative;
-  padding: 1.5rem var(--horizontal-padding) calc(var(--vertical-padding) + 4rem);
+  padding: 1.5rem var(--horizontal-padding) var(--vertical-padding);
   max-width: var(--max-width);
   margin: 0 auto;
   display: grid;
@@ -13,19 +13,22 @@ $bp-2: 767px;
   &.pad-none {
     padding-bottom: 0 !important;
   }
-  &.pad-small {
-    padding-bottom: var(--vertical-padding) !important;
+  &.pad-large {
+    padding-bottom: calc(var(--vertical-padding) + 4rem) !important;
   }
 
   @media (max-width: $bp) {
-    padding: 1rem var(--horizontal-padding) calc(var(--vertical-padding) + 4rem);
+    padding: 1rem var(--horizontal-padding) var(--vertical-padding);
   }
 
   @media (max-width: $bp-1) {
     grid-template-columns: 1fr !important;
     gap: 3rem 0;
     align-items: center;
-    padding: 3rem var(--horizontal-padding) calc(var(--vertical-padding) + 2rem);
+    padding: 3rem var(--horizontal-padding) var(--vertical-padding);
+    &.pad-large {
+      padding-bottom: calc(var(--vertical-padding) + 2rem) !important;
+    }
   }
 
   /* Content (Text + CTAs) */
