added legal pages, multiple updates on blocks, design updates

--- a/blocks/Feature/styles.module.scss
+++ b/blocks/Feature/styles.module.scss
@@ -43,6 +43,18 @@
   }
 }
 
+.disabled {
+  cursor: default;
+  opacity: 0.4;
+
+  .link {
+    cursor: not-allowed;
+    a {
+      pointer-events: none;
+    }
+  }
+}
+
 .left {
   align-items: flex-start;
   text-align: left;
