--- a/pages/blog/_slug/styles.module.scss
+++ b/pages/blog/_slug/styles.module.scss
@@ -1,6 +1,3 @@
-.article {
-}
-
 .headerContainer {
   text-align: center;
   border-bottom: 1px solid var(--light-5);
@@ -43,6 +40,7 @@
   .title {
     font-family: var(--font-text);
     font-size: 2.75rem;
+    hyphens: auto;
   }
 
   .desc {
