--- a/assets/styles/_global.scss
+++ b/assets/styles/_global.scss
@@ -3,6 +3,7 @@ body {
   font-family: var(--font-text);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background-color);
   color: var(--dark);
