--- a/blocks/Hero/styles.module.scss
+++ b/blocks/Hero/styles.module.scss
@@ -8,7 +8,7 @@ $bp-2: 767px;
   max-width: var(--max-width);
   margin: 0 auto;
   display: grid;
-  gap: 0 3rem;
+  gap: 3rem;
 
   &.pad-none {
     padding-bottom: 0 !important;
@@ -23,11 +23,22 @@ $bp-2: 767px;
 
   @media (max-width: $bp-1) {
     grid-template-columns: 1fr !important;
-    gap: 3rem 0;
     align-items: center;
     padding: 3rem var(--horizontal-padding) var(--vertical-padding);
     &.pad-large {
       padding-bottom: calc(var(--vertical-padding) + 2rem) !important;
+    }
+    &.fullWidth {
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+      .content {
+        padding-left: var(--horizontal-padding);
+        padding-right: var(--horizontal-padding);
+      }
+      .illustration {
+        max-width: inherit;
+        overflow: hidden;
+      }
     }
   }
 
@@ -187,4 +198,18 @@ $bp-2: 767px;
   &.center {
     grid-template-columns: 1fr;
   }
+}
+
+/* Gap */
+.gap-none {
+  gap: 0;
+}
+.gap-small {
+  gap: 1rem;
+}
+.gap-default {
+  gap: 3rem;
+}
+.gap-large {
+  gap: 4rem;
 }
