--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -2,6 +2,8 @@ $font-display: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto
   "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 $font-text: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
   "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+$font-code: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
+  monospace, serif;
 
 $header-height: 100px;
 $header-height-mobile: 80px;
@@ -31,6 +33,7 @@ $border-radius-round: 50%;
 :root {
   --font-display: #{$font-display};
   --font-text: #{$font-text};
+  --font-code: #{$font-code};
 
   --header-height: #{$header-height};
   --header-height-scrolled: #{$header-height-scrolled};
