updated blocks, added main animation (wip)

--- a/blocks/Section/styles.module.scss
+++ b/blocks/Section/styles.module.scss
@@ -66,6 +66,12 @@ $skew-angle: 5deg;
   }
 }
 
+.overflow-hidden {
+  .container {
+    overflow: hidden;
+  }
+}
+
 /* COLORS */
 .main {
   background-color: var(--main-color-light);
