cleaned up redundant data, added solution translations

--- a/components/Header/Navigation/styles.module.scss
+++ b/components/Header/Navigation/styles.module.scss
@@ -90,6 +90,10 @@ $submenu-rotation-x: -30deg;
 
 /* Menu Item Hover */
 .isSubmenu {
+  @media (max-width: $bp) {
+    overflow: hidden;
+    transform: translate3d(0, 0, 0);
+  }
   & > a {
     cursor: default;
     @media (max-width: $bp) {
@@ -98,6 +102,7 @@ $submenu-rotation-x: -30deg;
   }
 
   .chevDown {
+    pointer-events: none;
     margin-left: 0.5rem;
     height: 12px;
     width: 12px;
@@ -315,8 +320,10 @@ $submenu-rotation-x: -30deg;
   background-color: var(--light);
   transition: background-color 0.2s;
 
-  &:hover {
-    background-color: var(--light-3);
+  @media (hover: hover) {
+    &:hover {
+      background-color: var(--light-3);
+    }
   }
 
   @media (max-width: $bp) {
