performance optimizations, added social media to career form

--- a/blocks/HelpBanner/styles.module.scss
+++ b/blocks/HelpBanner/styles.module.scss
@@ -82,7 +82,7 @@ $bp: 812px;
 
   & > div {
     transform-origin: center;
-    transform: translate3d(0, -7%, 0) scale(1.5);
+    transform: translate3d(0, 0, 0) scale(1.175);
   }
 }
 
